# HelixNet

./: FinalProjectConstruction.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
data/: proteins.sample.csv
src/protein_cnn/: __init__.py  cli.py  data.py  model.py  train.py
tests/: test_smoke.py
